--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -6,7 +6,7 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/23 13:26:16 by ysalmi            #+#    #+#              #
-#    Updated: 2023/04/07 17:44:05 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/04/11 15:21:01 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,6 +31,7 @@ SRC := builtins.c \
 		get_env_var.c \
 		set_env_var.c \
 		get_last_status.c \
+		set_last_status.c \
 		utils.c \
 #		test.c \
 
