--- a/src/parser/Makefile
+++ b/src/parser/Makefile
@@ -6,7 +6,7 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/23 13:26:16 by ysalmi            #+#    #+#              #
-#    Updated: 2023/04/11 15:34:13 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/04/09 22:06:47 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -56,7 +56,7 @@ dslib:
 corelib:
 	@make -s -C $(CORE_DIR)
 
-obj/%.o: %.c lexer.h
+obj/%.o: %.c
 	@mkdir -p $(shell dirname $@)
 	@$(CC) $(CFLAGS) $I -c $< -o $@
 
