core: fixed cd parser: preparing parser files

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -6,7 +6,7 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/23 13:26:16 by ysalmi            #+#    #+#              #
-#    Updated: 2023/04/11 15:21:01 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/04/11 19:49:54 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -49,8 +49,10 @@ all: $(NAME)
 $(NAME): $(OBJ)
 	@ar -rcs $@ $^
 
-$(NAME)o: $(OBJ) $(LIBFT) $(DS_LIB)
-	@$(CC) $(CFLAGS) $(READLINE) -o $@ $(OBJ) $(LIBFT) $(DS_LIB)
+test: libft dslib core_test
+
+core_test: obj/test.o $(OBJ) $(LIBFT) $(DS_LIB)
+	@$(CC) $(CFLAGS) $I $(READLINE) -o $@ $< $(OBJ) $(LIBFT) $(DS_LIB)
 
 libft: 
 	@make -s -C $(LIBFT_DIR)
@@ -76,4 +78,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all lib clean fclean re
+.PHONY: all lib clean fclean re test
