--- a/src/parser/Makefile
+++ b/src/parser/Makefile
@@ -6,49 +6,57 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/23 13:26:16 by ysalmi            #+#    #+#              #
-#    Updated: 2023/04/12 23:36:01 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/04/13 12:22:23 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME := lexer
-CC := cc
-CFLAGS := -Wall -Wextra -Werror
-I := -I../../inc -I../../libft/inc -I../core -I.
-READLINE := -lreadline -I/goinfre/ysalmi/brew/opt/readline/include \
-	-L/goinfre/ysalmi/brew/opt/readline/lib
-LIBFT_DIR := ../../libft
-LIBFT := ../../libft/libft.a
-DS_DIR := ../datastructures
-DS_LIB := ../datastructures/datastructures.a
-CORE_DIR := ../core
-CORE_LIB := ../core/core.a
-
-SRC :=	split_line.c \
-		handle_quotes.c \
-		handle_redir_and_pipe.c \
-		main.c	\
-		utils.c	\
-		simple_word.c
-
-OBJ := $(SRC:%.c=%.o)
-OBJ := $(addprefix obj/, $(OBJ))
-
-test: libft heredoc
-
-heredoc: main.c new_heredoc_redirection.c expand.c
-	@cc $(CFLAGS) $I $^ $(LIBFT) -o $@ 
-
-
+# **************************************************************************** #
 N :=\x1b[0m
 G :=\x1b[32;01m
 R :=\x1b[31;01m
 B :=\x1b[43;01m
 O :=\x1b[33;01m
+# **************************************************************************** #
 
-all: libft dslib corelib $(NAME)
+NAME := parser.a
 
-$(NAME): $(OBJ) $(LIBFT) lexer.h
+CC := cc
+CFLAGS := -Wall -Wextra -Werror
+I := -I../../inc \
+		-I../../libft/inc \
+		-I../core
+
+READLINE := -lreadline \
+		-I/goinfre/ysalmi/brew/opt/readline/include \
+		-L/goinfre/ysalmi/brew/opt/readline/lib
+
+LIBFT_DIR := ../../libft
+LIBFT := ../../libft/libft.a
+
+DS_DIR := ../datastructures
+DS_LIB := ../datastructures/datastructures.a
+
+CORE_DIR := ../core
+CORE_LIB := ../core/core.a
+
+LEXER_DIR := ../lexer
+LEXER_LIB := ../lexer/lexer.a
+
+SRC := new_simple_command.c \
+		new_compound_command.c \
+		new_redirection.c 
+
+OBJ := $(SRC:%.c=%.o)
+OBJ := $(addprefix obj/, $(OBJ))
+
+test: $(testfile) libft dslib corelib $(NAME)
 	@$(CC) $(CFLAGS) $(READLINE) -o $@ $(OBJ) $(LIBFT) $(DS_LIB) $(CORE_LIB)
+
+all: $(NAME)
+
+$(NAME): $(OBJ)
+	@ar rcs $@ $(OBJ)
+
 
 libft: 
 	@make -s -C $(LIBFT_DIR)
@@ -59,6 +67,9 @@ dslib:
 corelib:
 	@make -s -C $(CORE_DIR)
 
+lexerlib:
+	@make -s -C $(LEXER_DIR)
+
 obj/%.o: %.c
 	@mkdir -p $(shell dirname $@)
 	@$(CC) $(CFLAGS) $I -c $< -o $@
@@ -67,6 +78,7 @@ clean:
 	@rm -rf obj/
 	@make -C $(LIBFT_DIR) clean
 	@make -C $(CORE_DIR) clean
+	@make -C $(LEXER_DIR) clean
 	@make -C $(DS_DIR) clean
 
 fclean: clean
@@ -74,6 +86,7 @@ fclean: clean
 	@rm -rf test
 	@make -C $(LIBFT_DIR) fclean
 	@make -C $(CORE_DIR) fclean
+	@make -C $(LEXER_DIR) fclean
 	@make -C $(DS_DIR) fclean
 
 re: fclean all
