--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/29 11:17:13 by ysalmi            #+#    #+#              #
-#    Updated: 2023/04/13 13:22:28 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/04/15 12:59:19 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -64,6 +64,7 @@ SRC := ft_atoi.c \
 		ft_lstmap.c \
 		ft_lstnew.c \
 		ft_lstsize.c \
+		ft_lstremove_if.c \
 		ft_printf.c \
 		ft_print_str.c \
 		ft_print_const_str.c \
