parser : adding expand functions

--- a/src/parser/Makefile
+++ b/src/parser/Makefile
@@ -52,6 +52,20 @@ SRC := new_simple_command.c \
 		read_heredoc.c \
 		expand.c
 
+#**************************************************************************************#
+
+SRC_T := ../../gnl/get_next_line.c \
+		../../gnl/get_next_line_utils.c \
+		tests/main.c \
+		expand_fd_var.c \
+		expand_var.c 
+
+ex:  libft dslib corelib lexerlib
+	@$(CC) $(CFLAGS) $I $(READLINE)  $(LIBFT) $(CORE_LIB) $(DS_LIB) $(LEXER_LIB) $(SRC_T) -o ex
+
+#***************************************************************************************#
+
+
 OBJ := $(SRC:%.c=%.o)
 OBJ := $(addprefix obj/, $(OBJ))
 
@@ -62,6 +76,7 @@ $(NAME): $(OBJ)
 
 test: $(testfile) libft dslib corelib lexerlib $(NAME)
 	@$(CC) $(CFLAGS) $I $(READLINE) -o $@ $< debug_utils.c $(OBJ) $(LIBFT) $(DS_LIB) $(CORE_LIB) $(LEXER_LIB)
+
 
 libft: 
 	@make -s -C $(LIBFT_DIR)
