updating  split  function

--- a/src/executor/Makefile
+++ b/src/executor/Makefile
@@ -50,7 +50,9 @@ SRC_T := 	../../gnline/get_next_line.c \
 		../../gnline/get_next_line_utils.c \
 		tests/wildcard.c \
 		expand_heredoc.c \
-		expand_var.c 
+		../parser/remove_quotes.c \
+		expand_var.c \
+		split_expanded.c
 
 ex:  libft dslib corelib lexerlib
 	@$(CC) $(CFLAGS) $I $(READLINE)  $(LIBFT) $(CORE_LIB) $(DS_LIB) $(LEXER_LIB) $(SRC_T) -o ex
