--- a/src/Makefile
+++ b/src/Makefile
@@ -6,11 +6,13 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/11 16:36:56 by ysalmi            #+#    #+#              #
-#    Updated: 2023/05/14 13:20:36 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/05/18 11:58:33 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 include core/Makefile lexer/Makefile parser/Makefile executer/Makefile
+
+CFLAGS := -Wall -Wextra -Werror -g -fsanitize=address
 
 I := -I../inc \
 		-I../libft/inc \
