--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -6,7 +6,7 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/23 13:26:16 by ysalmi            #+#    #+#              #
-#    Updated: 2023/05/20 12:39:45 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/05/23 16:23:58 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -33,6 +33,7 @@ CORE_SRC := builtins.c \
 		setup.c \
 		unset.c \
 		exit.c \
+		state.c \
 		get_current_wd.c \
 		get_env_var.c \
 		set_env_var.c \
